--- a/style/slideshow.css
+++ b/style/slideshow.css
@@ -2,9 +2,9 @@
 
 /* Slideshow container */
 .slidestt {
-    max-width: 1000px;
+    max-width: 800px;
     position: relative;
-    margin: auto;
+    margin: 0 auto;
 }
 
 /* Hide the images by default */
@@ -20,7 +20,7 @@
     top: 50%;
     width: auto;
     margin-top: -22px;
-    padding: 16px;
+    padding: 35px;
     color: dimgrey;
     font-weight: bold;
     font-size: 18px;
