--- a/style/mainpage.css
+++ b/style/mainpage.css
@@ -3,7 +3,7 @@
  Classes/Ids listed in A-Z order */
 
 body {
-    background: url(".../img/back.jpg") fixed;
+    background: url("back.jpg") fixed;
     background-size: 50%;
     margin-top: 0;
     margin-bottom: 0;
